# Dango_App

./: Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt  yes  yes.pub
mysite/mysite/: settings.py
