[tool.poetry]
name = "django-app2135"
version = "0.1.0"
description = ""
authors = ["Николай Война <nikolajvojna53@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.0"
django-rest-framework = "^0.1.0"
gunicorn = "^21.2.0"
pillow = "^10.0.0"
django-debug-toolbar = "^4.2.0"
django-filter = "^23.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
